@@ -22,8 +22,6 @@
 - After the factoring changes, we need to use Devel::Cover again to ferret
   out numbers that pass the early tests.
 
-- tests for primorial
-
 - Test all routines for numbers on word-size boundary, or ranges that cross.
 
 - Test all functions return either native or bigints.  Functions that return
@@ -33,8 +31,6 @@
 
 - Add Lehmer in PP (I have a version, just needs some polishing).
 
-- Move AKS tests into their own test, and add some provable prime tests.
-
 - For bignums, RiemannZeta and RiemmannR are slow and give questionable
   precision.  We should be able to do better.  One problem is the accuracy
   bug in Math::BigFloat.  Perhaps check for Math::MPFR installed and use it?
@@ -42,3 +38,12 @@
 
 - An assembler version of mulmod for i386 would be _really_ helpful for
   all the non-x86-64 Intel machines.
+
+- Tests for:
+
+   primorial
+   jordan_totient
+   divisor_sum
+   is_provable_prime
+   RiemannZeta
+   RiemannR
