@@ -16,7 +16,7 @@ my %mertens = (
       100 =>    1,
      1000 =>    2,
     10000 =>  -23,
-   100000 =>  -48,
+#   100000 =>  -48,
 #  1000000 =>  212,
 # 10000000 => 1037,
 );
